# IPBES-Classifier

./: .gitignore  MULTILABEL_METRICS_ENHANCEMENT.md  README.md  calculate_pos_weights.py  debug_path.py  pyproject.toml  test_simplified_imports.py  visualize_class_distribution.py
configs/: README.md  best_hpo.yaml  config.yaml  ensemble.yaml  environment.yaml  hpo.yaml  paths.yaml  train.yaml
experiments/: inference.py
experiments/IPBES/: ipbes_data.ipynb
notebooks/: results copy.ipynb  results.ipynb
results/: svm_metrics.csv
results/archives/: last_results.csv  metrics.csv  multi_labels_metrics.old.csv  random_forest_metrics.csv  svm_metrics.csv
results/metrics/: random_forest_metrics.csv  results.csv  results_old_kappa.csv  svm_metrics.csv
results/test preds/bert/: fold-3_Ensemble_BCE_with_title_run-0_opt_neg-100.csv  fold_0_BiomedNLP-BiomedBERT-base-uncased-abstract-fulltext_BCE_with_title_run-0_opt_neg-100.csv  fold_0_BiomedNLP-BiomedBERT-base-uncased-abstract_BCE_with_title_run-0_opt_neg-100.csv  fold_0_Ensemble_BCE_with_title_run-0_opt_neg-100.csv  fold_0_bert-base-uncased_BCE_with_title_run-0_opt_neg-100.csv  fold_0_biobert-v1.1_BCE_with_title_run-0_opt_neg-100.csv  fold_0_roberta-base_BCE_with_title_run-0_opt_neg-100.csv  fold_1_BiomedNLP-BiomedBERT-base-uncased-abstract-fulltext_BCE_with_title_run-0_opt_neg-100.csv  fold_1_BiomedNLP-BiomedBERT-base-uncased-abstract_BCE_with_title_run-0_opt_neg-100.csv  fold_1_Ensemble_BCE_with_title_run-0_opt_neg-100.csv  fold_1_bert-base-uncased_BCE_with_title_run-0_opt_neg-100.csv  (+20 more)
scripts/: clean.sh  kill.sh  launch_baselines.sh  launch_ipbes_pipeline.sh  test_config.py
src/: __init__.py  config.py
src/data_pipeline/: __init__.py  fetch.py  fetch.yaml  paraphrase.py  synthesis.py
src/models/: __init__.py  optimization.py  torch_fine_tuning.py
src/models/ipbes/: __init__.py  (+6 more)
src/utils/: __init__.py  config_loader.py  config_manager.py  import_utils.py  path_utils.py  utils.py
(+30 files in other folders)
